--- a/views/pizza.html
+++ b/views/pizza.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+
   <style type="text/css">
     * {
         -webkit-box-sizing: border-box;
@@ -54,7 +54,7 @@
     }
   </style>
 
-  <link rel="stylesheet" href="css/bootstrap-grid.css">
+  <link rel="stylesheet" href="css/bootstrap-grid-min.css">
 </head>
 
 <body>
