--- a/views/pizza.html
+++ b/views/pizza.html
@@ -1,6 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+  <meta charset="utf-8">
+  <meta http-equiv="Cache-Control" content="public,max-age=600">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <style type="text/css">
