fix issue with displaying a black pizza

--- a/views/pizza.html
+++ b/views/pizza.html
@@ -158,7 +158,7 @@
         <div id="randomPizzas" class="row">
           <div id="pizza0" class="randomPizzaContainer" style="width:33.33%;">
             <div class="col-md-6">
-              <img src="images/pizza.jpg" width="164" height="212" class="img-responsive">
+              <img src="images/pizza.png" width="164" height="212" class="img-responsive">
             </div>
             <div class="col-md-6">
               <h4>The Udacity Special</h4>
@@ -175,7 +175,7 @@
           </div>
           <div id="pizza1" class="randomPizzaContainer" style="width:33.33%;">
             <div class="col-md-6">
-              <img src="images/pizza.jpg" width="164" height="212" class="img-responsive">
+              <img src="images/pizza.png" width="164" height="212" class="img-responsive">
             </div>
             <div class="col-md-6">
               <h4>The Cameron Special</h4>
